--- a/index.html
+++ b/index.html
@@ -2,28 +2,37 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine me</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="page">
-        <header>
-            <img src="imagens/logo.svg" alt="Treine.me">
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Sobre</li>
-                    <li>Treinar</li>
-                </ul>
-            </nav>
-        </header>
+
+
+        <nav>
+            <a id="logo" href="#">
+                <img src="imagens/logo.svg" alt="Treine.me">
+            </a>
+            <ul>
+                <li> <a href="#"> Home</a></li>
+                <li> <a href="#"> Sobre</a></li>
+                <li> <a href="#"> Treinar</a></li>
+            </ul>
+        </nav>
+
 
         <main>
             <section>
-                <h1>Treinos exclusivos para você</h1>
+                <h1>Treinos <span>exclusivos</span> para você</h1>
 
                 <p>Nós criamos treinos <strong>exclusivos e únicos para você</strong> . <br>
                     Invista no seu corpo e <strong>tenha muito mais performance </strong> tenha muito mais performance e
