--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1>Treinos <span>exclusivos</span> para você</h1>
 
                 <p>Nós criamos treinos <strong>exclusivos e únicos para você</strong> . <br>
-                    Invista no seu corpo e <strong>tenha muito mais performance </strong> tenha muito mais performance e
+                    Invista no seu corpo e <strong>tenha muito mais performance </strong> e <br>
                     qualidade de vida.</p>
 
                 <button>
@@ -52,7 +52,7 @@
             fale concosco no instagram <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
         </footer>
     </div>
-    <img src="imagens/balls.png" alt="Bolinhas decorativas verdes no canto inferior da página">
+    <img id="balls" src="imagens/balls.png" alt="Bolinhas decorativas verdes no canto inferior da página">
 
 </body>
 
